kubernetes/socialecho-ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socialecho-ingress-canary
  namespace: socialecho
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: socialecho-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /server-status
    alb.ingress.kubernetes.io/canary: "true"
    alb.ingress.kubernetes.io/canary-by-ingress: "socialecho-ingress-stable"
    alb.ingress.kubernetes.io/canary-weight: "10"   # 🟢 send 10% of traffic to canary
    alb.ingress.kubernetes.io/canary-priority: "100"
spec:
  ingressClassName: alb
  rules:
    - host: socialecho-alb-1790495170.ap-south-1.elb.amazonaws.com
      http:
        paths:
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: backend-canary
                port:
                  number: 4000
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: frontend-canary
                port:
                  number: 80
