kubernetes/socialecho-ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socialecho-ingress-stable
  namespace: socialecho
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: socialecho-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /server-status
spec:
  ingressClassName: alb
  rules:
    - host: socialecho-alb-1790495170.ap-south-1.elb.amazonaws.com
      http:
        paths:
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
